@@ -1,6 +1,10 @@
+Oct 18, 2005
+
+  * ADDED: rdf-diagram to bind ^L to ->layout
+
 Sep 8, 2005
 
-  * ADDED: Save PostScript to Windows
+  * ADDED: Save PostScript to Windows.
 
 Sep 6, 2005
 
